--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,10 @@
       ]
     },
     "allowImportingTsExtensions": true,
-    "noEmit": true
+    "noEmit": true,
+    // Optimization settings for better tree shaking
+    "removeComments": true,
+    "importsNotUsedAsValues": "remove",
+    "verbatimModuleSyntax": true
   }
 }
