--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@google/genai": "^1.21.0",
     "firebase": "^12.6.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
