--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "index.tsx",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,18 +11,23 @@
   },
   "dependencies": {
     "@emailjs/browser": "4",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@google/genai": "^1.21.0",
     "firebase": "^12.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "recharts": "^3.4.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
+    "svg-to-ico": "^1.0.17",
     "tailwindcss": "^4.1.17",
     "terser": "^5.44.1",
     "typescript": "~5.8.2",
