--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,19 @@
     // Optimization settings for better tree shaking
     "removeComments": true,
     "importsNotUsedAsValues": "remove",
-    "verbatimModuleSyntax": true
-  }
+    "verbatimModuleSyntax": true,
+    // Additional settings to help with module resolution
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "strict": true
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
