--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,18 @@
   "installCommand": "npm install",
   "framework": "vite",
   "routes": [
-    { "src": "/[^.]+", "dest": "/index.html", "status": 200 }
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
   ]
 }
